--- a/style.css
+++ b/style.css
@@ -864,3 +864,35 @@ article:nth-child(7n + 6 of .card) {
   display: flex;
   margin: auto;
 }
+footer{
+  display: flex;
+  margin: 10px auto;
+  justify-content: center;
+  align-items: center;
+}
+footer p {
+  text-align: center;
+  font-size: 17px;
+  font-weight: 600;
+}
+.animated-text {
+  font-size: 20px;
+  font-weight: bold;
+  background: linear-gradient(45deg, #eafd40, #daff94, #fffb14); /* Define the gradient colors */
+  -webkit-background-clip: text; /* Apply text as the background clip for WebKit browsers */
+  -webkit-text-fill-color: transparent; /* Make text transparent so the gradient shows through */
+  animation: gradientAnimation 5s infinite; /* Apply the animation */
+}
+
+@keyframes gradientAnimation {
+  0% {
+    background-position: 0% 50%; /* Start position of the gradient */
+  }
+  50% {
+    background-position: 100% 50%; /* Middle position of the gradient */
+  }
+  100% {
+    background-position: 0% 50%; /* End position of the gradient */
+  }
+}
+
