--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
   font-family: 'Ubuntu', sans-serif;
 }
+html {
+  scroll-behavior: smooth;
+}
+
   .container {
     max-width: 1200px;
     margin: 0 auto;
