--- a/style.css
+++ b/style.css
@@ -4,10 +4,6 @@
   box-sizing: border-box;
   font-family: 'Ubuntu', sans-serif;
 }
-html {
-  scroll-behavior: smooth;
-}
-
   .container {
     max-width: 1200px;
     margin: 0 auto;
@@ -264,12 +260,11 @@ body {
     padding: 10px;
   }
   .menu .container h2{
-    margin: 30px  auto;
+    margin: 30px  auto;justify-content: center;
     align-items: center;
     display: flex;
     padding: 10px;
     border-bottom: 3px solid white;
-    width: 200px;
   }
   .menu {
     z-index: 1;
@@ -342,9 +337,15 @@ body {
   }
   /* contact us */
   section .big-container {
+    width: 100%;
     z-index: 1;
     margin: 50px 0 10px 0;
     padding: 10px;
+  }
+  section .big-container .container {
+    width: 500px;
+    height: 500px;
+    margin-bottom: 30px;
   }
   .big-container .section-title {
     font-size: 2rem;
@@ -380,17 +381,20 @@ body {
     flex-direction: column;  
     display: flex;
   }
-  
+  .contact-form input::placeholder {
+    font-size: 18px;
+  }
   .contact-form input,
   .contact-form textarea {
     margin: 10px;
     padding: 10px;
     border: none;
+    font-size: 18px;
     width: 100%;
     background-color: #333;
     color: #fff;
     border-radius: 5px;
-    width: 100%;
+    height: 50px;
   }
   
   .contact-form textarea {
@@ -406,8 +410,10 @@ body {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    font-size: 20px;
     width: 100%;
     margin: 10px;
+    height: 56px;
   }
   
   .submit-button:hover {
@@ -677,13 +683,13 @@ section .cards .card:nth-child(3)::before {
     scroll-behavior: smooth;
 }
 .tornpaper{
+    font-family: "Asap", sans-serif;
     position: relative;
     width: 100%;
     min-height: 100vh;
     text-align: center;
     overflow-x: hidden;
     color: white;
-
     display: grid;
     place-items: center;
     transform: translateZ(0);
@@ -697,7 +703,7 @@ section .cards .card:nth-child(3)::before {
     height: 100%; /* or 100vh */
     min-height: 100vh;
     background-color: rgba(255, 255, 255, 0.5);
-    background-image: url("https://images.unsplash.com/photo-1625496235025-d783abf061c8?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3MTE5MTIwMzV8&ixlib=rb-4.0.3&q=85");
+    background-image: url("torn-bg.jpeg");
     background-size: cover;
     background-position: center;
     background-blend-mode: screen;
@@ -712,7 +718,7 @@ section .cards .card:nth-child(3)::before {
 }
 .tornpaper footer {
     position: relative;
-
+    font-family: "Asap", sans-serif;
     margin: 1rem 0;
     color: #555;
 }
@@ -747,7 +753,6 @@ section .cards .card:nth-child(3)::before {
     --pin-y: 0.5rem;
     --pin-angle: 10deg;
     --pin-color: crimson;
-
     position: relative;
     width: 100%;
     aspect-ratio: 1/1.25;
@@ -755,13 +760,10 @@ section .cards .card:nth-child(3)::before {
 
     display: grid;
     place-items: center;
-
     background-color: papayawhip;
     background-image: var(--img);
     background-position: center;
     background-size: cover;
-    filter: url(#filter_tornpaper);
-
     transform-origin: var(--pin-x) var(--pin-y);
     transform: translateZ(0) rotate3d(0, 0, 1, var(--pin-angle));
     isolation: isolate;
@@ -837,7 +839,6 @@ article:nth-child(7n + 6 of .card) {
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  display: none;
   position: fixed;
   bottom: 20px;
   font-size: 24px;
@@ -869,7 +870,7 @@ article:nth-child(7n + 6 of .card) {
 }
 footer{
   display: flex;
-  margin: 10px auto;
+  margin: 30px auto;
   justify-content: center;
   align-items: center;
 }
